データを取り込む時に既存データへの参照を更新する

--- a/Cindeck.Core/Cindeck.Core.csproj
+++ b/Cindeck.Core/Cindeck.Core.csproj
@@ -56,7 +56,7 @@
     <Compile Include="CenterEffect.cs" />
     <Compile Include="FileDocumentSource.cs" />
     <Compile Include="GamerChWikiIdolSource.cs" />
-    <Compile Include="HoldingIdol.cs" />
+    <Compile Include="OwnedIdol.cs" />
     <Compile Include="ICenterEffect.cs" />
     <Compile Include="IDocumentSource.cs" />
     <Compile Include="Idol.cs" />
