--- a/Cindeck/Cindeck.csproj
+++ b/Cindeck/Cindeck.csproj
@@ -74,12 +74,16 @@
     <Compile Include="ViewModels\ImplementedIdolViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\OwnedIdolViewModel.cs" />
+    <Compile Include="ViewModels\SimulationViewModel.cs" />
     <Compile Include="ViewModels\UnitViewModel.cs" />
     <Compile Include="Views\ImplementedIdolView.xaml.cs">
       <DependentUpon>ImplementedIdolView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\OwnedIdolView.xaml.cs">
       <DependentUpon>OwnedIdolView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SimulationView.xaml.cs">
+      <DependentUpon>SimulationView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\UnitView.xaml.cs">
       <DependentUpon>UnitView.xaml</DependentUpon>
@@ -113,6 +117,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Views\OwnedIdolView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\SimulationView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
