--- a/Cindeck.Core/Cindeck.Core.csproj
+++ b/Cindeck.Core/Cindeck.Core.csproj
@@ -56,6 +56,7 @@
     <Compile Include="CenterEffect.cs" />
     <Compile Include="FileDocumentSource.cs" />
     <Compile Include="GamerChWikiIdolSource.cs" />
+    <Compile Include="GamerChWikiSongSource.cs" />
     <Compile Include="OwnedIdol.cs" />
     <Compile Include="ICenterEffect.cs" />
     <Compile Include="IDocumentSource.cs" />
@@ -68,9 +69,11 @@
     <Compile Include="NoteJudgement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rarity.cs" />
+    <Compile Include="Simulator.cs" />
     <Compile Include="Skill.cs" />
     <Compile Include="SkillDuration.cs" />
     <Compile Include="SkillTriggerPossibility.cs" />
+    <Compile Include="Song.cs" />
     <Compile Include="SortOption.cs" />
     <Compile Include="Unit.cs" />
     <Compile Include="Utils.cs" />
