ゲスト、Groove、ルーム効果およびサポートメンバーなどの条件に応じた合計アピール値の計算ができるようになりました

--- a/Cindeck.Core/Cindeck.Core.csproj
+++ b/Cindeck.Core/Cindeck.Core.csproj
@@ -57,6 +57,7 @@
     <Compile Include="FileDocumentSource.cs" />
     <Compile Include="GamerChWikiIdolSource.cs" />
     <Compile Include="GamerChWikiSongSource.cs" />
+    <Compile Include="IViewModel.cs" />
     <Compile Include="OwnedIdol.cs" />
     <Compile Include="ICenterEffect.cs" />
     <Compile Include="IDocumentSource.cs" />
