各画面でフィルターを設定できるようになりました

--- a/Cindeck.Core/Cindeck.Core.csproj
+++ b/Cindeck.Core/Cindeck.Core.csproj
@@ -55,6 +55,7 @@
     <Compile Include="AppealType.cs" />
     <Compile Include="CenterEffect.cs" />
     <Compile Include="FileDocumentSource.cs" />
+    <Compile Include="FilterConfig.cs" />
     <Compile Include="GamerChWikiIdolSource.cs" />
     <Compile Include="GamerChWikiSongSource.cs" />
     <Compile Include="IViewModel.cs" />
