新しいセンター効果「条件付きアピールアップ」（トリコロールシリーズ）を対応

--- a/Cindeck.Core/Cindeck.Core.csproj
+++ b/Cindeck.Core/Cindeck.Core.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="AppConfig.cs" />
     <Compile Include="AppealType.cs" />
+    <Compile Include="AppealUpCondition.cs" />
     <Compile Include="CenterEffect.cs" />
     <Compile Include="FileDocumentSource.cs" />
     <Compile Include="FilterConfig.cs" />
