--- a/Cindeck.Core/Cindeck.Core.csproj
+++ b/Cindeck.Core/Cindeck.Core.csproj
@@ -70,6 +70,7 @@
     <Compile Include="IIdolSource.cs" />
     <Compile Include="ISkill.cs" />
     <Compile Include="NoteJudgement.cs" />
+    <Compile Include="Potential.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomFactory.cs" />
     <Compile Include="Rarity.cs" />
