--- a/Cindeck.Core/Cindeck.Core.csproj
+++ b/Cindeck.Core/Cindeck.Core.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomFactory.cs" />
     <Compile Include="Rarity.cs" />
+    <Compile Include="ReleaseInfo.cs" />
     <Compile Include="Simulator.cs" />
     <Compile Include="Skill.cs" />
     <Compile Include="SkillDuration.cs" />
