一部の譜面データが読み込めないので修正

--- a/Cindeck.Core/Cindeck.Core.csproj
+++ b/Cindeck.Core/Cindeck.Core.csproj
@@ -82,6 +82,7 @@
     <Compile Include="SkillDuration.cs" />
     <Compile Include="SkillTriggerPossibility.cs" />
     <Compile Include="Song.cs" />
+    <Compile Include="SongInfo.cs" />
     <Compile Include="SortOption.cs" />
     <Compile Include="Unit.cs" />
     <Compile Include="Utils.cs" />
