終了時にシミュレーションの設定を保存する

--- a/Cindeck.Core/Cindeck.Core.csproj
+++ b/Cindeck.Core/Cindeck.Core.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Rarity.cs" />
     <Compile Include="ReleaseInfo.cs" />
     <Compile Include="Simulator.cs" />
+    <Compile Include="SimulatorConfig.cs" />
     <Compile Include="Skill.cs" />
     <Compile Include="SkillDuration.cs" />
     <Compile Include="SkillTriggerPossibility.cs" />
